090916 cs  xtt       New xtt commands 'create opmenuitem' and 'delete opmenuitem' to modify operator window menu..
090930 cs  ge        Java compile problems for subgraphs with multiple annotations fixed.
091020 cs  xtt       Bugfix in System Messages, zip-files >= version 10 was not opened in the correct order in next/prev file.
091029 cs  xtt       Bugfix in xtt logging, restore on attributes of attributeobject didn't work.
091029 cs  xtt       Bugfix in xtt logging, if showfile was activate before logging was terminated, xtt could segfault.
091102 cs  ge        Menu entry to create subgraphs added.
091102 cs  ge        Menu items for connections changed to radio items.
091103 cs  xtt       Translation and utf8 conversion of search condition in EventLog window fixed.
091104 cs  glow      Fixcolor added to arc properties.
091106 cs  ge        Different ways to show hot object added: linewith, light color, dark color.
091208 cs  xtt       New pixmap for weblink in helpwindow.
091208 cs  xtt       EventSelectList exended to 40 elements.
100111 cs  xtt       Method Photo added to xtt toolbar.
100118 cs  ge        Possibility to configure the tooltip size in Ge graphs.
100129 cs  xtt       Event name added to alarm text in operator window.
100129 cs  xtt       Methods navigator and history added to method toolbar, which also can be used for other components than xtt.
100129 cs  xtt       Toolbar added to alarm and event window. Method buttons for both event object and sup object.
100201 cs  ge        StoDo works with slider objects.
100201 cs  xtt       Commands 'open graph /class/parent' and 'check isattribute' added button in object graphs to open parent object graph.
100209 cs  xtt       Error message for invalid local attributes in Ge graphs.
100209 cs  ge        Command 'set attr/bypass' replaced by action SetValue in object graphs.
100209 cs  ge        PID object graph, indicator for Inverse didn't work.