@@ -54,6 +54,6 @@ queuefull	<Queue is full>					/error
 waveformat	<Unsupported wavefile format>			/error
 filecorrupt	<File is corrupt>				/error
 notcollectw	<Not collect window>				/error
-
+noclassgraph	<No classgraph found>				/error
 
 
